# publish-to-confluence-action

./: README.md  __main__.py  action.yml  pyproject.toml  requirements.txt
confluence_api_utils/: utils.py
documentation/: CaptainsLog.html  CodeOfConduct.html
documentation/architecture/decisions/: 0001-introduction-of-adr.html
